<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.UserProfileActivity">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@mipmap/profile_placeholder" />
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onUploadPhotoTapped"
                android:text="Upload Photo" />
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Name:"
                        android:textColor="@color/black" />
                    <EditText
                        android:id="@+id/nameInput"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Email:"
                        android:textColor="@color/black" />
                    <EditText
                        android:id="@+id/emailInput"
                        android:enabled="false"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Address:"
                        android:textColor="@color/black" />
                    <EditText
                        android:id="@+id/addressInput"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="University:"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/universityText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Select University"
                        android:textColor="@color/design_default_color_primary"
                        android:onClick="onUniversityTapped" />
                </TableRow>
            </TableLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center">
                <Button
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:layout_gravity="left"
                    android:onClick="onLogoutTapped"
                    android:id="@+id/logoutButton"
                    android:text="Log out" />
                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:onClick="onSaveTapped"
                    android:text="Save" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>